# skill-tree

17_20天Agent开发速成/: .env.example  .gitignore  .pre-commit-config.yaml  20天Agent开发学习计划.md  20天Agent开发学习计划_打卡版.md  Agent开发工程师完整技能栈与学习路线.md  CONFIG_GUIDE.md  QUICKSTART.md  README.md  pyproject.toml  test_config.py  verify_milm.py  verify_setup.py
17_20天Agent开发速成/.trae/documents/: async_llm_client_plan.md  llm_backend_selector_plan.md
17_20天Agent开发速成/Day01/: README.md  今日串讲.md  今日心得.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/Day01/code/: 05_production_crawler.py  README.md  async_complete.py  day01_async_complete.py
17_20天Agent开发速成/day01/: FAQ.md  README.md  tcpudp握手挥手逻辑理解.md  面试题_标准答案.md
17_20天Agent开发速成/day01/code/: 01_coroutine_basics.py  02_async_traps.py  03_aiohttp_basics.py  03_aiohttp_demo_local.py  04_semaphore_timeout.py  06_retry_decorator.py  async_llm_example.py  requirements.txt
17_20天Agent开发速成/day02/: FAQ.md  PyTorch_GPU_CPU_深度理解与安装指南.md  README.md  今日串讲.md  过拟合与正则化.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day02/code/: 01_role_setting.py  02_cot_techniques.py  03_fewshot_best_practice.py  04_structured_json.py  05_prompt_injection.py  (+6 more)
17_20天Agent开发速成/day03/: FAQ.md  Plan与Spec功能对比.md  README.md  openai-python-详解.md  今日串讲.md  今日心得.md  评估指标与Agent效果评估.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day04/: FAQ.md  Function_Calling底层原理与协议.md  README.md  今日串讲.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day05/: Embedding模型对比与选型.md  FAQ.md  RAG完整流程详解.md  README.md  今日串讲.md  向量数据库基础实战.md  相似度检索原理.md  词向量与Tokenizer.md  重排序Rerank实战.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day06/: FAQ.md  README.md  今日串讲.md  元数据过滤与混合检索.md  文本分类与NER实战.md  文档分块策略.md  查询重写与RAGAS评估.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day07/: FAQ.md  LangGraph核心概念.md  ML基础-梯度下降与激活函数.md  README.md  Transformer深度精讲.md  今日串讲.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day08/: Checkpoint与状态持久化.md  LangGraph图编译原理.md  README.md  今日串讲.md  流式输出与Human-in-the-loop.md  面试题.md  面试题_标准答案.md  预训练模型三大家族.md
17_20天Agent开发速成/day09/: README.md  ReAct模式深度解析.md  今日串讲.md  注意力机制源码级解析.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day10/: README.md  今日串讲.md  记忆系统设计.md  重要性评分与检索策略.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day11/: Plan-and-Execute模式.md  README.md  今日串讲.md  动态调整与多模态.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day12/: Agent角色定义实战.md  CrewAI快速入门.md  README.md  今日串讲.md  任务分配与编排.md  多Agent架构模式详解.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day13/: README.md  今日串讲.md  共享工作空间.md  冲突解决.md  协调者模式.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day14/: KV Cache详解.md  LoRA微调入门.md  README.md  今日串讲.md  死循环防护.md  量化推理.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day15/: README.md  今日串讲.md  架构设计.md  模块划分.md  需求分析.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day16/: README.md  今日串讲.md  代码理解与AST.md  代码生成技术详解.md  完整闭环实战.md  执行沙箱设计.md  报错分析技术.md  自动修正技术.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day17/: A_B测试实战.md  RAGAS评估.md  README.md  今日串讲.md  功能测试详解.md  异常处理策略.md  性能优化指南.md  面试题.md  面试题_标准答案.md  项目收尾清单.md
17_20天Agent开发速成/day18/: Docker容器化.md  FastAPI基础.md  Gradio实战.md  README.md  今日串讲.md  面试题.md  面试题_标准答案.md
17_20天Agent开发速成/day19/: Python基础面试题.md  Python基础面试题_答案.md  README.md  今日串讲.md  面试题.md
17_20天Agent开发速成/day20/: README.md  今日串讲.md  大模型面试题.md  大模型面试题_答案.md  简历优化指南.md
17_20天Agent开发速成/doc/: Day02_CodeReview_Agent.py  Day02_JSON_Output_Control.py  Day02_Learning_Summary.md  Day02_Leetcode_125.py  Day02_Prompt_Injection.py  Day02_code_review_result.json  Day02_json_prompts.json
17_20天Agent开发速成/llm/: ARCHITECTURE.md  MODEL_REGISTRY_README.md  OPTIMIZATION_SUMMARY.md  ORGANIZE_SUMMARY.md  OpenAI通用协议与官方SDK区别.md  PROVIDERS_MERGE_PLAN.md  README.md  __init__.py  config.py  requirements.txt  run_tests.py  test_6upgrades.py  test_model_registry.py
(+594 files in other folders)
