[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-dev-course"
version = "1.0.0"
description = "20天Agent开发速成课程代码"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"
exclude = '''
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
select = ["E", "W", "F", "B", "C90"]
ignore = [
    "E501",  
    "W503",  
    "E203",  
]
exclude = [
    ".eggs",
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
ignore_missing_imports = false
follow_imports = "normal"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
    "tests/",
    ".git/",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_alphabetical_sort = true
line_length = 88
