[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-dev-course"
version = "1.0.0"
description = "20天Agent开发速成课程代码"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 基础HTTP和异步
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "aiosignal>=1.3.0",
    "frozenlist>=1.4.0",
    
    # 数据验证和结构化输出
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # 大模型SDK
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "langchain-openai>=0.1.0",
    
    # Agent框架
    "langchain>=0.2.0",
    "langgraph>=0.0.0",
    "langchain-core>=0.2.0",
    
    # 向量数据库和Embedding
    "faiss-cpu>=1.7.4",
    "qdrant-client>=1.7.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.5.0",
    "tiktoken>=0.6.0",
    
    # 工具库
    "tenacity>=8.2.0",  # 重试
    "python-dotenv>=1.0.0",  # 环境变量
    "numpy>=1.26.0",
    "python-multipart>=0.0.0",  # FastAPI用
    
    # 部署
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    
    # 日志
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    # 代码质量工具
    "black>=24.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    
    # 测试
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    
    # 调试
    "ipython>=8.0.0",
    "ipdb>=0.13.0",
]

gui = [
    # 图形界面Demo
    "streamlit>=1.30.0",
    "gradio>=4.0.0",
]

full = [
    "agent-dev-course[dev,gui]",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"
exclude = '''
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
select = ["E", "W", "F", "B", "C90"]
ignore = [
    "E501",  
    "W503",  
    "E203",  
]
exclude = [
    ".eggs",
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
ignore_missing_imports = false
follow_imports = "normal"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = [
    "tests/",
    ".git/",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_alphabetical_sort = true
line_length = 88
